# new-engine

./: .a.txt.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.txt  cmake_install.cmake  leg.txt  llog.txt  run instructions.txt  time.txt
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
models/: axes.ipt  axes.stl  debris_1kg.stl  f16_old.stl  f16_wrapped.stl  f16_wrapped_old.stl  flame_trail.stl  pole.ipt  pole.stl  pyramid.stl  runway.ipt  runway.stl  sphere.stl
models - Copy/: aim9xVertices.stl  bulletOctahedron.stl  bulletOctahedronPoints.stl  cubeVertices.stl  f16Vertices.stl  flameTrailPoints.stl  groundVerticesColorUniform.stl  jetVertices.stl  models dot cpp
models/OldVersions/: axes.0001.ipt  runway.0002.ipt
scenarios/: scenario1.json  scenario_1.json  scenario_ground.json  scenario_high_speed.json  scenario_in_the_bowl.json  scenario_runway.json  scenario_runway_approach.json  scenario_sky_close.json  scenario_sky_traffic_jam.json  scenario_sky_with_other.json  scenario_sky_with_others.json  scenario_space.json
shaders/: fragment_shader_text - Copy.txt  fragment_shader_text.txt  vertex_shader_text - Copy.txt  vertex_shader_text_rand.txt
shaders/fragment shaders/: bad attempt at hdr.txt  depth.txt  full_aces_and_fog.txt  slight dither.txt
shaders/vertex shaders/: no op.txt  randomize colors.txt
src/: main.cpp  simulation_state.cpp  simulation_state.hpp  todo.txt
src/collision/: collider.cpp  collider.h  collider.hpp  collider_type.h  collision_data.cpp  collision_data.hpp  logic.cpp  logic.hpp  meshes.cpp  meshes.hpp  shapes.cpp  shapes.hpp
src/constants/: constants.cpp  constants.hpp
src/controls/: controls.cpp  controls.hpp
src/math/: pid.cpp  (+3 more)
(+70 files in other folders)
